enviando tudo para o repo

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <li class="animacao-sublinhado">
                                 <a id="welcome"></a>
                             </li>
-                            <li class="animacao-sublinhado"><a href="#">Inicio</a></li>
+                            <li id="Inicio-Sidebar" class="animacao-sublinhado"><a href="#">Inicio</a></li>
                             <li class="animacao-sublinhado"><a href="inovacao/index.html">Tecnologias</a></li>
                             <li class="animacao-sublinhado"><a href="pag-missoes/pag2.html">Missões</a></li>
                             <li class="animacao-sublinhado"><a href="programas/pag3.html">Programas</a></li>
