--- a/programas/pag3.html
+++ b/programas/pag3.html
@@ -51,7 +51,7 @@
                             <li class="animacao-sublinhado">
                                 <a id="welcome"></a>
                             </li>
-                            <li class="animacao-sublinhado"><a href="../index.html">Inicio</a></li>
+                            <li id="Inicio-Sidebar" class="animacao-sublinhado"><a href="../index.html">Inicio</a></li>
                             <li class="animacao-sublinhado"><a href="../inovacao/index.html">Tecnologias</a></li>
                             <li class="animacao-sublinhado"><a href="../pag-missoes/pag2.html">Missões</a></li>
                             <li class="animacao-sublinhado"><a href="../programas/pag3.html">Programas</a></li>
@@ -80,9 +80,11 @@
         <div class="texto-centro">
             <h1 id="Titulo-Programa">PROGRAMA DE ASTRONAUTAS</h1>
 
-            <h3 id="Sub-Titulo">Os astronautas da Astro Link são mais do que exploradores: são embaixadores do conhecimento humano no
+            <h3 id="Sub-Titulo">Os astronautas da Astro Link são mais do que exploradores: são embaixadores do
+                conhecimento humano no
                 cosmos.</h3>
-            <h3 id="Sub-Abaixo-Titulo">Eles representam coragem, preparo e o desejo de expandir os limites do possível.</h3>
+            <h3 id="Sub-Abaixo-Titulo">Eles representam coragem, preparo e o desejo de expandir os limites do possível.
+            </h3>
         </div>
     </div>
     <div class="galeria-astronauta">
