--- a/FAQ/Pagina-noticIAS.html
+++ b/FAQ/Pagina-noticIAS.html
@@ -51,7 +51,7 @@
                         <li class="animacao-sublinhado">
                             <a id="welcome"></a>
                         </li>
-                        <li class="animacao-sublinhado"><a href="../index.html">Inicio</a></li>
+                        <li id="Inicio-Sidebar" class="animacao-sublinhado"><a href="../index.html">Inicio</a></li>
                         <li class="animacao-sublinhado"><a href="../inovacao/index.html">Tecnologias</a></li>
                         <li class="animacao-sublinhado"><a href="../pag-missoes/pag2.html">Missões</a></li>
                         <li class="animacao-sublinhado"><a href="../programas/pag3.html">Programas</a></li>
