--- a/pag-missoes/pag2.html
+++ b/pag-missoes/pag2.html
@@ -56,7 +56,7 @@
                             <li class="animacao-sublinhado">
                                 <a id="welcome"></a>
                             </li>
-                            <li class="animacao-sublinhado"><a href="../index.html">Inicio</a></li>
+                            <li id="Inicio-Sidebar" class="animacao-sublinhado"><a href="../index.html">Inicio</a></li>
                             <li class="animacao-sublinhado"><a href="../inovacao/index.html">Tecnologias</a></li>
                             <li class="animacao-sublinhado"><a href="#">Missões</a></li>
                             <li class="animacao-sublinhado"><a href="../programas/pag3.html">Programas</a></li>
