enviando tudo para o repo

--- a/Vendas/vendas.html
+++ b/Vendas/vendas.html
@@ -81,7 +81,7 @@
 
 
 
-        <h1 class="titulo-loja">LOJA ESPACIAL</h1>
+        <h1 id="Loja-especial" class="titulo-loja">LOJA ESPACIAL</h1>
 
         <div class="texto-vendas">
 
@@ -167,7 +167,7 @@
 
             <div class="conteudo-foguete">
 
-
+                <h1>Monte o seu próprio foguete:</h1>
                 <div class="imagem-conteudo-foguete">
 
                     <img id="fogueteImagem" src="../img/154997.svg" alt="foguete">
