--- a/login/sigin.html
+++ b/login/sigin.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Logar</title>
+    <title>Sign-In</title>
     <link rel="stylesheet" href="sigin.css">
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
 </head>
