--- a/pag-missoes/pag2.html
+++ b/pag-missoes/pag2.html
@@ -199,7 +199,7 @@
 
                 <video class="bg-video" autoplay muted loop>
                     <source src="../vid/_MConverter.eu_starship_on_orbit_refilling.hevc.webm" type="video/webm">
-                    <source src="/vid/starship_on_orbit_refilling.hevc.mp4" type="video/mp4; codecs=hvc1">
+                    <source src="../vid/starship_on_orbit_refilling.hevc.mp4" type="video/mp4; codecs=hvc1">
                 </video>
 
 
